add get products paged action

--- a/Hola.Shopping.Api.Application.Implementation/Hola.Shopping.Api.Application.Implementation.csproj
+++ b/Hola.Shopping.Api.Application.Implementation/Hola.Shopping.Api.Application.Implementation.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="9.0.0" />
+    <PackageReference Include="LinqKit.Core" Version="1.1.17" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.9.0" />
   </ItemGroup>
 
