--- a/Client/HolaShopping/package.json
+++ b/Client/HolaShopping/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^4.4.1",
     "core-js": "^2.5.4",
     "guid-typescript": "^1.0.9",
+    "ng-bootstrap": "^1.6.3",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
