--- a/Hola.Shopping/Hola.Shopping.Api.csproj
+++ b/Hola.Shopping/Hola.Shopping.Api.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="AutoWrapper.Core" Version="2.1.0" />
     <PackageReference Include="LinqKit.Core" Version="1.1.17" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="3.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
